k8s/overlays/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreservice
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: coreservice
          image: ghcr.io/vcharrie/coreservice:3961bd822fd57171c58431f93a5f1b4a78f2fe89
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
